--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,7 @@
 /* Header with logo */
  header {
         width: 100%;
-        height: 200px;
+        height: auto;
 }
 
 header img {
@@ -17,49 +17,4 @@ header img {
 
 h1 {
   font-size: 2em;
-}
-
-/* Form */
-main {
-  text-align: center;
-  color: #142a50;
-  width: 90:
-}
-
-h1 {
-  font-weight: bolder;
-  text-algin: left;
-}
-
-#form {
-  background-color: white;
-  width: 90%;
-  margin: auto;
-  padding: 20px;
-}
-
-#form label {
-  text-algin: left;
-  width: 90%;
-}
-
-#form input {
-  background-color:#e5e5e5;
-  border: none;
-  width: 90%;
-}
-
-#form #description {
-  height: 200px;
-}
-
-.search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #fff;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
 }
