--- a/public/style.css
+++ b/public/style.css
@@ -63,3 +63,20 @@ h1 {
   border: none;
   cursor: pointer;
 }
+
+#btnRow {
+  width: 100%;
+  height: 10vw;
+  display: flex;
+  
+}
+
+.btn {
+  color:white;
+  background-color: #daab27;
+  font-weight: bolder;
+  font-size: larger;
+  border-radius: 10px;
+  padding: 10px;
+  height: auto;
+}
