--- a/public/style.css
+++ b/public/style.css
@@ -26,27 +26,31 @@ main {
   width: 90:
 }
 
-h1 {
+#formTitle {
   font-weight: bolder;
   text-algin: left;
+  width: 80%;
+  margin: auto;
 }
 
 #form {
   background-color: white;
-  width: 90%;
+  width: 80%;
   margin: auto;
   padding: 20px;
 }
 
 #form label {
-  text-algin: left;
-  width: 90%;
+  float: left;
+  margin: 5px;
 }
 
 #form input {
   background-color:#e5e5e5;
   border: none;
-  width: 90%;
+  width: 100%;
+  height: 30px;
+  font-size: 1.5em;
 }
 
 #form #description {
@@ -65,10 +69,12 @@ h1 {
 }
 
 #btnRow {
-  width: 100%;
-  height: 10vw;
+  width: 90%;
+  height: 5vw;
   display: flex;
-  
+  flex-direction: row-reverse;
+  margin: auto;
+  margin-top: 2vw;
 }
 
 .btn {
@@ -77,6 +83,6 @@ h1 {
   font-weight: bolder;
   font-size: larger;
   border-radius: 10px;
-  padding: 10px;
-  height: auto;
+  padding: 0 15px;
+  height: 50px;
 }
