😹🚇 Checkpoint ./public/style.css:3398664/230 ./public/screen03.html:3398664/94

--- a/public/style.css
+++ b/public/style.css
@@ -90,3 +90,19 @@ main {
 }
 
 /* Search */
+#search {
+  width: 80%;
+  margin: auto;
+  padding: 20px;
+}
+
+.searchBtn {
+  widht: 100%;
+  height: 50px;
+  background-color:white;
+}
+.searchBtn img{
+  height: 100%;
+  width: 20px;
+}
+
