--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,7 @@ main {
 }
 
 #btnRow {
-  width: 90%;
+  width: 100%;
   height: 5vw;
   display: flex;
   flex-direction: row-reverse;
@@ -91,19 +91,17 @@ main {
 
 /* Search */
 #search {
-  width: 80%;
+  width: 100%;
   margin: auto;
-  padding: 20px;
 }
 
-.searchBtn {
+.searchBtn div{
   widht: 100%;
-  height: 70px;
+  height: 40px;
   background-color:white;
 }
 .searchBtn img{
   height: 100%;
-  width: 100%;
-  width: 30px;
+  float: right;
 }
 
