--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,10 @@ header img {
   font-family: "Montserrat", regular;
 }
 
+html {
+  padding-bottom: 50px;
+}
+
 h1 {
   font-size: 2em;
 }
@@ -23,7 +27,8 @@ h1 {
 main {
   text-align: center;
   color: #142a50;
-  width: 90:
+  width: 90%;
+  margin: auto;
 }
 
 #formTitle {
@@ -43,14 +48,13 @@ main {
 
 #form label {
   float: left;
-  margin: 5px;
+  margin: 10px 0;
 }
 
 #form input {
   background-color:#e5e5e5;
   border: none;
   width: 100%;
-  height: 30px;
   font-size: 1.5em;
 }
 
@@ -91,8 +95,10 @@ main {
 
 /* Search */
 #search {
-  width: 100%;
+  width: 80%;
   margin: auto;
+  padding: 20px;
+  background-color: white;
 }
 
 .searchBtn div{
