--- a/public/style.css
+++ b/public/style.css
@@ -31,9 +31,9 @@ main {
   margin: auto;
 }
 
-#formTitle {
+.sectionTitle {
   font-weight: bolder;
-  text-algin: left;
+  text-align: left;
   width: 90%;
   margin: auto;
 }
@@ -65,17 +65,6 @@ main {
   height: 200px;
 }
 
-.search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #fff;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
-
 #btnRow {
   width: 100%;
   height: 5vw;
@@ -100,6 +89,27 @@ main {
 #search {
   width: 90%;
   margin: 20px auto;
+}
+
+.search-container {
+  width: 100%;
+  margin: auto;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  height: 40px;
+  justify-content: space-between;
+}
+
+.search-container input {
+  font-size: 1.5em;
+  width: 90%;
+}
+
+.search-container img {
+  height: 100%;
+  width: 10%;
+  align-self: flex-end;
 }
 
 .searchBtn div{
