--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ main {
 }
 
 #form form {
-  margin: 20px;
+  margin: 0 20px;
 }
 
 #form label {
@@ -123,4 +123,6 @@ main {
   height: 100%;
   float: right;
 }
+
+/* tim */
 
