--- a/public/style.css
+++ b/public/style.css
@@ -124,5 +124,17 @@ main {
   float: right;
 }
 
-/* tim */
+/* Date and Time */
+.dateNTime input{
+  display: inline-block;
+  float: left;
+}
 
+.date {
+  width: 20% !important;
+  margin-right: 10px !important;
+}
+
+.time {
+  width: 20% !important;
+}
