--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap');
+
 /* Header with logo */
  header {
     width: 100%;
@@ -142,7 +144,7 @@ main {
 
 /* Search Result */
 .searchResultsTitle {
-  font-family: "Montserrat", bolder !important;
+  font-family: "Montserrat", bold !important;
   font-weight: bolder;
   text-align: left;
   width: 100%;
@@ -153,7 +155,7 @@ main {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin: auto;
+  margin: 20px 0;
 }
 
 .resultsSub h1 {
@@ -165,4 +167,5 @@ main {
   background-color: #142a50;
   padding: 10px;
   border-radius: 10px;
+  text-decoration: none;
 }
