🏣👹 Checkpoint ./public/screen09.html:3398664/2465 ./public/style.css:3398664/203

--- a/public/style.css
+++ b/public/style.css
@@ -200,10 +200,27 @@ main {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  
+}
+
+.info {
   display: flex;
 }
 
-.content img {
+.info img {
   width: 30%;
 }
+
+.infoItem {
+  display: flex;
+  width: 70%;
+}
+
+.infoItem h2 {
+  width: 
+}
+
+.infoItem p {
+  
+}
+
+
