🏚🏆 Checkpoint ./public/screen09.html:3398664/9289 ./public/style.css:3398664/281

--- a/public/style.css
+++ b/public/style.css
@@ -202,12 +202,21 @@ main {
   transition: max-height 0.2s ease-out;
 }
 
-.info {
+.info,.content  {
   display: flex;
 }
 
-.info img {
+.info {
+  flex-direction: column;
+}
+
+.infoItem .content img {
+  margin: 15px;
+}
+
+.content img {
   width: 30%;
+  min-height: 300px;
 }
 
 .infoItem {
