--- a/public/style.css
+++ b/public/style.css
@@ -210,7 +210,7 @@ main {
   flex-direction: column;
 }
 
-.infoItem .content img {
+.infoItem, .content img {
   margin: 15px;
 }
 
@@ -222,14 +222,18 @@ main {
 .infoItem {
   display: flex;
   width: 70%;
+  text-align: left;
 }
 
 .infoItem h2 {
-  width: 
+  color: black;
+  font-weight: bold;
+  width: 30%;
 }
 
 .infoItem p {
-  
+  color: black;
+  width: 70%;
 }
 
 
